client1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: client1
   labels:
      name: client1
