client1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1-app
spec:
  selector:
    matchLabels:
      app: client1
  replicas: 1
  template:
    metadata:
      labels:
        app: client1
    spec:
      containers:
      - name: client1
        image: sh240293/atlan-multi-tentant:client1
        ports:
        - containerPort: 80
