client1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client1-svc
spec:
  selector:
     app: client1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
